--- a/index.html
+++ b/index.html
@@ -4,10 +4,27 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rock-Paper-Scissors</title>
-    <script type="text/javascript" src="main.js"></script>
+    <script type="text/javascript" src="main.js" defer></script>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div class="main">
+    <div id="main">
+        <h1 id="title">Rock-Paper-Scissors</h1>
+        <p id="instruct">Choose your character:</p>
+        <div id="buttons">
+            <button id="rock">Rock</button>
+            <button id="paper">Paper</button>
+            <button id="scissors">Scissors</button>
+        </div>
+        <div id="result">Waiting...</div>
+        <div id="scoreboard">
+            <div>Player: <span id="user_score">0</span></div>
+            <div>Computer: <span id="comp_score">0</span></div>
+        </div>
+        <div id="game_over">
+            <p id="game_result"></p>
+            <button id="restart">Play again?</button>
+        </div>
     </div>
 </body>
 </html>
